add handle outlier

--- a/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
+++ b/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
@@ -656,18 +656,15 @@
     "\n",
     "#TODO detecting and treating outliers on columns\n",
     "\n",
-    "- [ ] `pack`\n",
-    "- [ ] `bottle_volume_ml`\n",
-    "- [ ] `state_bottle_cost`\n",
-    "- [ ] `state_bottle_retail`,\n",
-    "- [ ] `bottles_sold`\n",
-    "- [ ] `sale_dollars`, \n",
-    "- [ ] `volume_sold_liters`"
+    "- [x] removed due to under 5% outliers\n",
+    "  `pack`, `state_bottle_cost`, `state_bottle_retail`, `bottles_sold`, `sale_dollars`, `volume_sold_liters`\n",
+    "- [x] not removed due to over 5% outliers and are natural outliers\n",
+    "  `bottle_volume_ml`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -685,39 +682,29 @@
     }
    ],
    "source": [
-    "def calculateLowerLimitUpperLimit(strategy: int, column: str):\n",
-    "    match strategy:\n",
-    "        # normal distribution\n",
-    "        case 0:\n",
-    "            mean, std = df.loc[:, column].agg(['mean', 'std'])\n",
-    "            return mean - 3 * std, mean + 3 * std\n",
-    "        # skewed distribution\n",
-    "        case 1:\n",
-    "            q1, q3 = df.loc[:, column].quantile([.25,.75])\n",
-    "            iqr = q3 - q1\n",
-    "            return q1 - iqr * 1.5, q3 + iqr * 1.5\n",
-    "        # extreme skewed distribution\n",
-    "        case 2:\n",
-    "            q1, q3 = df.loc[:, column].quantile([.25, .75])\n",
-    "            iqr = q3 - q1\n",
-    "            return q1 - iqr * 3, q3 + iqr * 3\n",
-    "        case _:\n",
-    "            raise NotImplementedError\n",
+    "def calculateLowerLimitUpperLimit(series: pd.Series):\n",
+    "    skew = series.skew()\n",
     "\n",
+    "    # extreme skewed distribution\n",
+    "    if skew < -1 or skew > 1:\n",
+    "        q1, q3 = series.quantile([.25,.75])\n",
+    "        iqr = q3 - q1\n",
+    "        return q1 - iqr * 3, q3 + iqr * 3\n",
+    "    # skewed distribution\n",
+    "    elif skew < -0.5 or skew > 0.5:\n",
+    "        q1, q3 = series.quantile([.25,.75])\n",
+    "        iqr = q3 - q1\n",
+    "        return q1 - iqr * 1.5, q3 + iqr * 1.5\n",
+    "    # normal distribution\n",
+    "    else:\n",
+    "        mean, std = series.agg(['mean', 'std'])\n",
+    "        return mean - 3 * std, mean + 3 * std\n",
     "\n",
     "for index, value in df.loc[:,['pack', 'bottle_volume_ml', 'state_bottle_cost', 'state_bottle_retail', \n",
     "    'bottles_sold', 'sale_dollars', 'volume_sold_liters']].skew().items():\n",
-    "    # skewed distribution\n",
-    "    if value < -0.5 or value > 0.5:\n",
-    "        if value < -1 or value > 1:\n",
-    "            lowerLimit, upperLimit = calculateLowerLimitUpperLimit(2, index)\n",
-    "        else:\n",
-    "            lowerLimit, upperLimit = calculateLowerLimitUpperLimit(1, index)\n",
-    "    # normal distribution\n",
-    "    else:\n",
-    "        lowerLimit, upperLimit = calculateLowerLimitUpperLimit(0, index)\n",
+    "    lowerLimit, upperLimit = calculateLowerLimitUpperLimit(df.loc[:, str(index)])\n",
     "\n",
-    "    min, max = df.loc[:, index].agg(['min', 'max'])\n",
+    "    min, max = df.loc[:, str(index)].agg(['min', 'max'])\n",
     "    if lowerLimit > min or upperLimit < max:\n",
     "        print(\"column {0}, lower limit {1} > min {2}, upper limit {3} < max {4}\" \\\n",
     "                .format(index, lowerLimit, min, upperLimit, max))"
@@ -977,10 +964,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "column bottle_volume_ml, outliers percentage 29.22%, handle manually\n"
+     ]
+    }
+   ],
+   "source": [
+    "df4 = df3.copy()\n",
+    "\n",
+    "for index, value in df4.loc[:, ['pack', 'bottle_volume_ml', 'state_bottle_cost', 'state_bottle_retail', \n",
+    "    'bottles_sold', 'sale_dollars', 'volume_sold_liters']].items():\n",
+    "    lowerLimit, upperLimit = calculateLowerLimitUpperLimit(value)\n",
+    "    outliersPercentage = len(value.loc[(value < lowerLimit) | (value > upperLimit)]) \\\n",
+    "                         / len(value)\n",
+    "    # outliers percentage under 5%\n",
+    "    if outliersPercentage < 0.05:\n",
+    "        df4 = df4.drop(str(index), axis='columns')\n",
+    "    # outliers pecentage over 5%\n",
+    "    # handle manually\n",
+    "    else:\n",
+    "        print(\"column {0}, outliers percentage {1:.2f}%, handle manually\".format(str(index), outliersPercentage * 100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lower limit 375.0, upper limit 1375.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "750     168465\n",
+       "1750     69668\n",
+       "375      41446\n",
+       "1000     41404\n",
+       "50       19341\n",
+       "200      12879\n",
+       "500       9092\n",
+       "100       3823\n",
+       "600       3213\n",
+       "3000      1643\n",
+       "300       1301\n",
+       "800        263\n",
+       "1200       194\n",
+       "2400       132\n",
+       "1800       107\n",
+       "3500        45\n",
+       "900         41\n",
+       "2250        38\n",
+       "400         34\n",
+       "20          30\n",
+       "4500        26\n",
+       "6000        16\n",
+       "950         14\n",
+       "1950         8\n",
+       "850          6\n",
+       "5250         1\n",
+       "700          1\n",
+       "Name: bottle_volume_ml, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# natural outliers, no need to replace\n",
+    "df4_bottle_volume_ml = df4.loc[:,'bottle_volume_ml']\n",
+    "print(\"lower limit {0[0]}, upper limit {0[1]}\".format(calculateLowerLimitUpperLimit(df4_bottle_volume_ml)))\n",
+    "display(df4_bottle_volume_ml.value_counts().sort_values(ascending=False))"
+   ]
   },
   {
    "cell_type": "markdown",
