add ask instructor

--- a/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
+++ b/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
@@ -964,14 +964,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "column bottle_volume_ml, outliers percentage 29.22%, handle manually\n"
+      "column pack, outliers percentage 2.87%\n",
+      "column bottle_volume_ml, outliers percentage 29.22%, handle manually\n",
+      "column state_bottle_cost, outliers percentage 1.12%\n",
+      "column state_bottle_retail, outliers percentage 1.12%\n",
+      "column bottles_sold, outliers percentage 3.45%\n",
+      "column sale_dollars, outliers percentage 2.73%\n",
+      "column volume_sold_liters, outliers percentage 1.76%\n"
      ]
     }
    ],
@@ -985,11 +991,25 @@
     "                         / len(value)\n",
     "    # outliers percentage under 5%\n",
     "    if outliersPercentage < 0.05:\n",
+    "        print(\"column {0}, outliers percentage {1:.2f}%\".format(str(index), outliersPercentage * 100))\n",
     "        df4 = df4.drop(str(index), axis='columns')\n",
     "    # outliers pecentage over 5%\n",
     "    # handle manually\n",
     "    else:\n",
     "        print(\"column {0}, outliers percentage {1:.2f}%, handle manually\".format(str(index), outliersPercentage * 100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ask Instructor\n",
+    "\n",
+    "reference: https://www.quora.com/Is-it-bad-to-delete-statistical-outliers\n",
+    "\n",
+    "- [ ] Is it true in Machine Learning, it is always a requirement to remove the outliers?\n",
+    "  - If so, should we remove natural outliers in column `bottle_volume_ml`?\n",
+    "- [ ] Is it ok to remove the outliers if the outliers percentage is under 5%, although it maybe natural outliers?"
    ]
   },
   {
@@ -1054,6 +1074,11 @@
    "source": [
     "# Analisis dan Perhitungan"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
