fix handling outlier

--- a/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
+++ b/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
@@ -959,12 +959,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Outliers Detection and Treatment"
+    "## Outliers Detection and Treatment\n",
+    "\n",
+    "- natural outliers on columns\n",
+    "\n",
+    "  outliers under 5%\n",
+    "  \n",
+    "  `pack`\n",
+    "  \n",
+    "  outliers over 5%\n",
+    "\n",
+    "  `bottle_volume_ml`\n",
+    "\n",
+    "- not natural outliers on columns\n",
+    "\n",
+    "  outliers under 5%\n",
+    "\n",
+    "  `state_bottle_cost`, `state_bottle_retail`, `bottles_sold`, `sale_dollars`, `volume_sold_liters`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -972,31 +988,230 @@
      "output_type": "stream",
      "text": [
       "column pack, outliers percentage 2.87%\n",
-      "column bottle_volume_ml, outliers percentage 29.22%, handle manually\n",
-      "column state_bottle_cost, outliers percentage 1.12%\n",
-      "column state_bottle_retail, outliers percentage 1.12%\n",
-      "column bottles_sold, outliers percentage 3.45%\n",
-      "column sale_dollars, outliers percentage 2.73%\n",
-      "column volume_sold_liters, outliers percentage 1.76%\n"
+      "lower limit -12.0, upper limit 30.0\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "60        18\n",
+       "48      9893\n",
+       "44       807\n",
+       "30         6\n",
+       "28         1\n",
+       "24     36705\n",
+       "20         4\n",
+       "15        54\n",
+       "12    204798\n",
+       "10      8100\n",
+       "9         33\n",
+       "8       1637\n",
+       "6     105226\n",
+       "5        602\n",
+       "4        700\n",
+       "3        448\n",
+       "2          1\n",
+       "1       4198\n",
+       "Name: pack, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "column bottle_volume_ml, outliers percentage 29.22%\n",
+      "lower limit 375.0, upper limit 1375.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6000        16\n",
+       "5250         1\n",
+       "4500        26\n",
+       "3500        45\n",
+       "3000      1643\n",
+       "2400       132\n",
+       "2250        38\n",
+       "1950         8\n",
+       "1800       107\n",
+       "1750     69668\n",
+       "1200       194\n",
+       "1000     41404\n",
+       "950         14\n",
+       "900         41\n",
+       "850          6\n",
+       "800        263\n",
+       "750     168465\n",
+       "700          1\n",
+       "600       3213\n",
+       "500       9092\n",
+       "400         34\n",
+       "375      41446\n",
+       "300       1301\n",
+       "200      12879\n",
+       "100       3823\n",
+       "50       19341\n",
+       "20          30\n",
+       "Name: bottle_volume_ml, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "column state_bottle_cost, outliers percentage 1.12%\n",
+      "lower limit -17.0, upper limit 35.5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1949.02       1\n",
+       "1599.19       3\n",
+       "419.99        1\n",
+       "390.00        7\n",
+       "314.99        2\n",
+       "           ... \n",
+       "1.00        227\n",
+       "0.97         73\n",
+       "0.95        245\n",
+       "0.90       2056\n",
+       "0.89        369\n",
+       "Name: state_bottle_cost, Length: 1133, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "column state_bottle_retail, outliers percentage 1.12%\n",
+      "lower limit -25.5, upper limit 53.25\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2923.53       1\n",
+       "2398.79       3\n",
+       "629.99        1\n",
+       "585.00        7\n",
+       "472.49        2\n",
+       "           ... \n",
+       "1.50        227\n",
+       "1.46         73\n",
+       "1.43        245\n",
+       "1.35       2056\n",
+       "1.34        369\n",
+       "Name: state_bottle_retail, Length: 1135, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "column bottles_sold, outliers percentage 3.45%\n",
+      "lower limit -24.0, upper limit 39.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "13200        1\n",
+       "2430         1\n",
+       "2304         1\n",
+       "2100         1\n",
+       "1980         1\n",
+       "         ...  \n",
+       "5         5033\n",
+       "4        19781\n",
+       "3        34862\n",
+       "2        48105\n",
+       "1        42394\n",
+       "Name: bottles_sold, Length: 157, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "column sale_dollars, outliers percentage 2.73%\n",
+      "lower limit -307.68, upper limit 490.74\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "250932.00     1\n",
+       "36154.80      1\n",
+       "30399.30      1\n",
+       "27181.44      2\n",
+       "26271.00      1\n",
+       "             ..\n",
+       "1.50          4\n",
+       "1.46          4\n",
+       "1.35         13\n",
+       "1.34          3\n",
+       "0.00         79\n",
+       "Name: sale_dollars, Length: 6644, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "column volume_sold_liters, outliers percentage 1.76%\n",
+      "lower limit -25.5, upper limit 37.5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "13200.00       1\n",
+       "4252.50        1\n",
+       "4032.00        1\n",
+       "3675.00        1\n",
+       "2688.00        1\n",
+       "            ... \n",
+       "0.08           1\n",
+       "0.06           2\n",
+       "0.05        6536\n",
+       "0.04           8\n",
+       "0.02           6\n",
+       "Name: volume_sold_liters, Length: 313, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "df4 = df3.copy()\n",
-    "\n",
-    "for index, value in df4.loc[:, ['pack', 'bottle_volume_ml', 'state_bottle_cost', 'state_bottle_retail', \n",
+    "for index, value in df3.loc[:, ['pack', 'bottle_volume_ml', 'state_bottle_cost', 'state_bottle_retail', \n",
     "    'bottles_sold', 'sale_dollars', 'volume_sold_liters']].items():\n",
     "    lowerLimit, upperLimit = calculateLowerLimitUpperLimit(value)\n",
     "    outliersPercentage = len(value.loc[(value < lowerLimit) | (value > upperLimit)]) \\\n",
     "                         / len(value)\n",
-    "    # outliers percentage under 5%\n",
-    "    if outliersPercentage < 0.05:\n",
-    "        print(\"column {0}, outliers percentage {1:.2f}%\".format(str(index), outliersPercentage * 100))\n",
-    "        df4 = df4.drop(str(index), axis='columns')\n",
-    "    # outliers pecentage over 5%\n",
-    "    # handle manually\n",
-    "    else:\n",
-    "        print(\"column {0}, outliers percentage {1:.2f}%, handle manually\".format(str(index), outliersPercentage * 100))"
+    "    print(\"column {0}, outliers percentage {1:.2f}%\".format(str(index), outliersPercentage * 100))\n",
+    "    print(\"lower limit {0[0]}, upper limit {0[1]}\".format(calculateLowerLimitUpperLimit(value)))\n",
+    "    display(value.value_counts().sort_index(ascending=False))"
    ]
   },
   {
@@ -1008,64 +1223,21 @@
     "reference: https://www.quora.com/Is-it-bad-to-delete-statistical-outliers\n",
     "\n",
     "- [ ] Is it true in Machine Learning, it is always a requirement to remove the outliers?\n",
-    "  - If so, should we remove natural outliers in column `bottle_volume_ml`?\n",
-    "- [ ] Is it ok to remove the outliers if the outliers percentage is under 5%, although it maybe natural outliers?"
+    "  - If so, should we remove natural outliers or do mean/median imputation in column `bottle_volume_ml`?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 164,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "lower limit 375.0, upper limit 1375.0\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "750     168465\n",
-       "1750     69668\n",
-       "375      41446\n",
-       "1000     41404\n",
-       "50       19341\n",
-       "200      12879\n",
-       "500       9092\n",
-       "100       3823\n",
-       "600       3213\n",
-       "3000      1643\n",
-       "300       1301\n",
-       "800        263\n",
-       "1200       194\n",
-       "2400       132\n",
-       "1800       107\n",
-       "3500        45\n",
-       "900         41\n",
-       "2250        38\n",
-       "400         34\n",
-       "20          30\n",
-       "4500        26\n",
-       "6000        16\n",
-       "950         14\n",
-       "1950         8\n",
-       "850          6\n",
-       "5250         1\n",
-       "700          1\n",
-       "Name: bottle_volume_ml, dtype: int64"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# natural outliers, no need to replace\n",
-    "df4_bottle_volume_ml = df4.loc[:,'bottle_volume_ml']\n",
-    "print(\"lower limit {0[0]}, upper limit {0[1]}\".format(calculateLowerLimitUpperLimit(df4_bottle_volume_ml)))\n",
-    "display(df4_bottle_volume_ml.value_counts().sort_values(ascending=False))"
+    "df4 = df3.copy()\n",
+    "\n",
+    "# outliers percentage under 5% and not natural outliers\n",
+    "for index, value in df4.loc[:, ['state_bottle_cost', 'state_bottle_retail', 'bottles_sold', 'sale_dollars', 'volume_sold_liters']].items():\n",
+    "    lowerLimit, upperLimit = calculateLowerLimitUpperLimit(value)\n",
+    "    df4 = df4.drop(df4.loc[(value < lowerLimit) | (value > upperLimit),str(index)].index)"
    ]
   },
   {
