add null treatment

--- a/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
+++ b/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
@@ -53,7 +53,7 @@
    "source": [
     "## Latar Belakang\n",
     "\n",
-    "Saya ingin belajar Hypothesis Testing Two Sample Independent."
+    "Sebagai Data Analyst yang mungkin akan bekerja di e-commerce atau franchisor convenience store, saya perlu intuisi untuk \"apa perlu menambah stok minuman beralkohol ketika terjadi krisis seperti Pandemi Covid-19\""
    ]
   },
   {
@@ -870,11 +870,11 @@
     "#TODO handle null rows on columns\n",
     "\n",
     "range index: 373231 entries\n",
-    "\n",
-    "- [ ] `city`            372256\n",
-    "- [ ] `zip_code`        372256\n",
-    "- [ ] `category`        373094\n",
-    "- [ ] `category_name`   373094"
+    "- [x] remove null due to categorical data\n",
+    "  - `city`            372256\n",
+    "  - `zip_code`        372256\n",
+    "  - `category`        373094\n",
+    "  - `category_name`   373094"
    ]
   },
   {
@@ -980,14 +980,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "column pack, outliers percentage 2.87%\n",
+      "column pack, skew 2.72, outliers percentage 2.87%\n",
       "lower limit -12.0, upper limit 30.0\n"
      ]
     },
@@ -1022,7 +1022,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "column bottle_volume_ml, outliers percentage 29.22%\n",
+      "column bottle_volume_ml, skew 0.93, outliers percentage 29.22%\n",
       "lower limit 375.0, upper limit 1375.0\n"
      ]
     },
@@ -1066,7 +1066,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "column state_bottle_cost, outliers percentage 1.12%\n",
+      "column state_bottle_cost, skew 49.36, outliers percentage 1.12%\n",
       "lower limit -17.0, upper limit 35.5\n"
      ]
     },
@@ -1094,7 +1094,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "column state_bottle_retail, outliers percentage 1.12%\n",
+      "column state_bottle_retail, skew 49.36, outliers percentage 1.12%\n",
       "lower limit -25.5, upper limit 53.25\n"
      ]
     },
@@ -1122,7 +1122,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "column bottles_sold, outliers percentage 3.45%\n",
+      "column bottles_sold, skew 191.71, outliers percentage 3.45%\n",
       "lower limit -24.0, upper limit 39.0\n"
      ]
     },
@@ -1150,7 +1150,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "column sale_dollars, outliers percentage 2.73%\n",
+      "column sale_dollars, skew 267.76, outliers percentage 2.73%\n",
       "lower limit -307.68, upper limit 490.74\n"
      ]
     },
@@ -1178,7 +1178,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "column volume_sold_liters, outliers percentage 1.76%\n",
+      "column volume_sold_liters, skew 178.64, outliers percentage 1.76%\n",
       "lower limit -25.5, upper limit 37.5\n"
      ]
     },
@@ -1209,7 +1209,7 @@
     "    lowerLimit, upperLimit = calculateLowerLimitUpperLimit(value)\n",
     "    outliersPercentage = len(value.loc[(value < lowerLimit) | (value > upperLimit)]) \\\n",
     "                         / len(value)\n",
-    "    print(\"column {0}, outliers percentage {1:.2f}%\".format(str(index), outliersPercentage * 100))\n",
+    "    print(\"column {0}, skew {1:.2f}, outliers percentage {2:.2f}%\".format(str(index), value.skew(), outliersPercentage * 100))\n",
     "    print(\"lower limit {0[0]}, upper limit {0[1]}\".format(calculateLowerLimitUpperLimit(value)))\n",
     "    display(value.value_counts().sort_index(ascending=False))"
    ]
@@ -1220,6 +1220,8 @@
    "source": [
     "### Ask Instructor\n",
     "\n",
+    "#TODO ask instructor\n",
+    "\n",
     "reference: https://www.quora.com/Is-it-bad-to-delete-statistical-outliers\n",
     "\n",
     "- [ ] Is it true in Machine Learning, it is always a requirement to remove the outliers?\n",
@@ -1228,14 +1230,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
     "df4 = df3.copy()\n",
     "\n",
     "# outliers percentage under 5% and not natural outliers\n",
-    "for index, value in df4.loc[:, ['state_bottle_cost', 'state_bottle_retail', 'bottles_sold', 'sale_dollars', 'volume_sold_liters']].items():\n",
+    "for index, value in df4.loc[:, ['state_bottle_cost', 'state_bottle_retail', \n",
+    "                                'bottles_sold', 'sale_dollars', 'volume_sold_liters']] \\\n",
+    "                        .items():\n",
     "    lowerLimit, upperLimit = calculateLowerLimitUpperLimit(value)\n",
     "    df4 = df4.drop(df4.loc[(value < lowerLimit) | (value > upperLimit),str(index)].index)"
    ]
@@ -1244,13 +1248,105 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analisis dan Perhitungan"
+    "## Null Treatment"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Ask Instructor\n",
+    "\n",
+    "#TODO ask instructor\n",
+    "\n",
+    "- [ ] should we remove rows based on condition (a column with categorical data is null)?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "column city, null percentage 0.25%\n",
+      "column zip_code, null percentage 0.25%\n",
+      "column category, null percentage 0.03%\n",
+      "column category_name, null percentage 0.03%\n"
+     ]
+    }
+   ],
+   "source": [
+    "for index, value in df4.loc[:,['city','zip_code','category','category_name']].items():\n",
+    "    print(\"column {0}, null percentage {1:.2f}%\".format(index, len(value.loc[value.isna()]) / len(value) * 100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df5 = df4.copy()\n",
+    "\n",
+    "# categorical data, we will drop them.\n",
+    "for index, value in df5.loc[:, ['city', 'zip_code', 'category', 'category_name']].items():\n",
+    "    df5 = df5.drop(df5.loc[value.isna()].index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 349528 entries, 0 to 373229\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column                   Non-Null Count   Dtype  \n",
+      "---  ------                   --------------   -----  \n",
+      " 0   invoice_and_item_number  349528 non-null  object \n",
+      " 1   date                     349528 non-null  object \n",
+      " 2   city                     349528 non-null  object \n",
+      " 3   zip_code                 349528 non-null  float64\n",
+      " 4   category                 349528 non-null  float64\n",
+      " 5   category_name            349528 non-null  object \n",
+      " 6   pack                     349528 non-null  int64  \n",
+      " 7   bottle_volume_ml         349528 non-null  int64  \n",
+      " 8   state_bottle_cost        349528 non-null  float64\n",
+      " 9   state_bottle_retail      349528 non-null  float64\n",
+      " 10  bottles_sold             349528 non-null  int64  \n",
+      " 11  sale_dollars             349528 non-null  float64\n",
+      " 12  volume_sold_liters       349528 non-null  float64\n",
+      "dtypes: float64(6), int64(3), object(4)\n",
+      "memory usage: 37.3+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df5.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 240,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df6 = df5.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analisis dan Perhitungan"
+   ]
   },
   {
    "cell_type": "markdown",
