add hypothesis testing 1 - a

--- a/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
+++ b/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
@@ -68,13 +68,13 @@
     "\n",
     "Tujuan: mencari kota terbaik untuk menjual minuman beralkohol\n",
     "\n",
-    "- [x] Di kota (column `city`) mana penjualan tertinggi (dalam volume / column `volume_sold_liters`) minuman beralkohol di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2021?\n",
-    "- [x] Di kota (column `city`) mana penjualan tertinggi (dalam total harga / column `sale_dollars`) di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2021?\n",
+    "- [x] Di kota (column `city`) mana penjualan tertinggi (dalam volume / column `volume_sold_liters`) minuman beralkohol di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2022?\n",
+    "- [x] Di kota (column `city`) mana penjualan tertinggi (dalam total harga / column `sale_dollars`) di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2022?\n",
     "\n",
     "Tujuan: menentukan ukuran botol dan kategori minuman beralkohol yang harus distok\n",
     "\n",
-    "- [x] Apa ukuran botol (column `bottle_volume_ml`) minuman beralkohol yang paling banyak terjual (column `bottles_sold`) di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2021?\n",
-    "- [x] Apa kategori (column `category_name`) minuman beralkohol yang paling banyak terjual (column `bottles_sold`) di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2021?\n",
+    "- [x] Apa ukuran botol (column `bottle_volume_ml`) minuman beralkohol yang paling banyak terjual (column `bottles_sold`) di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2022?\n",
+    "- [x] Apa kategori (column `category_name`) minuman beralkohol yang paling banyak terjual (column `bottles_sold`) di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2022?\n",
     "\n",
     "### Statistik Deskriptif\n",
     "\n",
@@ -85,17 +85,17 @@
     "\n",
     "### Hypothesis Testing 1\n",
     "\n",
-    "- [ ] Apa rata-rata penjualan minuman beralkohol (dalam volume / column `volume_sold_liters`) di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2021 sama/berbeda (lebih kecil/lebih besar)?\n",
-    "- [ ] Apa rata-rata penjualan minuman beralkohol (dalam total harga / column `sale_dollars`) di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2021 sama/berbeda?\n",
+    "- [x] Apa rata-rata penjualan minuman beralkohol (dalam volume / column `volume_sold_liters`) di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2022 sama/berbeda (lebih kecil/lebih besar)?\n",
+    "- [ ] Apa rata-rata penjualan minuman beralkohol (dalam total harga / column `sale_dollars`) di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2022 sama/berbeda?\n",
     "\n",
     "### Hypothesis Testing 2\n",
     "\n",
-    "- [ ] Apa rata-rata harga minuman beralkohol (column `state_bottle_retail`) di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2021 sama/berbeda?\n",
+    "- [ ] Apa rata-rata harga minuman beralkohol (column `state_bottle_retail`) di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2022 sama/berbeda?\n",
     "\n",
-    "### Dugaan Penyebab Perbedaan Rata-rata Penjualan Minuman Beralkohol pada bulan Januari 2018 dan 2021\n",
+    "### Dugaan Penyebab Perbedaan Rata-rata Penjualan Minuman Beralkohol pada bulan Januari 2018 dan 2022\n",
     "\n",
-    "- [ ] Apa korelasi harga minimuman beralkohol (column `state_bottle_retail`) dengan jumlah botol terjual (column `bottles_sold`) di Iowa Amerika Serikat pada bulan Januari 2018 dan 2021?\n",
-    "- [ ] Apa minuman beralkohol dijual (column `state_bottle_retail`) dibawah biaya produksi (`state_bottle_cost`) di Iowa Amerika Serikat pada bulan Januari 2018 dan 2021?"
+    "- [ ] Apa korelasi harga minimuman beralkohol (column `state_bottle_retail`) dengan jumlah botol terjual (column `bottles_sold`) di Iowa Amerika Serikat pada bulan Januari 2018 dan 2022?\n",
+    "- [ ] Apa minuman beralkohol dijual (column `state_bottle_retail`) dibawah biaya produksi (`state_bottle_cost`) di Iowa Amerika Serikat pada bulan Januari 2018 dan 2022?"
    ]
   },
   {
@@ -109,14 +109,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import plotly.express as px\n",
     "from plotly.subplots import make_subplots\n",
-    "import plotly.graph_objects as go"
+    "import plotly.graph_objects as go\n",
+    "from scipy import stats"
    ]
   },
   {
@@ -1944,7 +1945,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Des Mones adalah kota dengan penjualan tertinggi minuman beralkohol di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2021"
+    "### Des Mones adalah kota dengan penjualan tertinggi minuman beralkohol di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2022"
    ]
   },
   {
@@ -7460,7 +7461,86 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Statistik Inferensial"
+    "## Statistik Inferensial\n",
+    "\n",
+    "Terdapat banyak faktor yang berbeda (hari libur, pandemi, dan lain-lain) dalam masing-masing data (2018 dan 2022). Faktor ini menyebabkan kita tidak dapat membandingkan kedua data secara adil.\n",
+    "\n",
+    "Oleh karena itu, kita menggunakan hypothesis testing two sample untuk menguji apakah kedua data tersebut sama atau berbeda dari sisi:\n",
+    "\n",
+    "1. rata-rata penjualan dalam volume, total harga pada bulan Januari 2018 dan 2021.\n",
+    "2. rata-rata harga minuman pada bulan Januari 2018 dan 2021."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rata-rata penjualan minuman beralkohol dalam volume di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2022 berbeda.\n",
+    "\n",
+    "H0: μ(2018, volume_sold_liters) = μ(2022, volume_sold_liters)\n",
+    "\n",
+    "H1: μ(2018, volume_sold_liters) != μ(2022, volume_sold_liters)\n",
+    "\n",
+    "We will reject null hypothesis if p-value is below 1%.\n",
+    "\n",
+    "Since our p-value is less than 0.05, so we reject the null hypothesis and we can conclude (with 99% confidence) that, the mean in volume sold liters in January 2018 and January 2022 is different."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p-value 0.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "series_1_2018 = df6.loc[(df6['year'] == 2018) & (df6['month'] == 1),'volume_sold_liters']\n",
+    "series_1_2022 = df6.loc[(df6['year'] == 2022) & (df6['month'] == 1),'volume_sold_liters']\n",
+    "\n",
+    "t_stat, p_val = stats.ttest_ind(series_1_2018, series_1_2022)\n",
+    "print(\"p-value {:.2f}\".format(p_val))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rata-rata penjualan minuman beralkohol dalam volume in Iowa, Amerika Serikat pada bulan Januari 2018 lebih besar daripada Januari 2022\n",
+    "\n",
+    "H0: μ(2018, volume_sold_liters) >= μ(2022, volume_sold_liters)\n",
+    "\n",
+    "H1: μ(2018, volume_sold_liters) < μ(2022, volume_sold_liters)\n",
+    "\n",
+    "We will reject null hypothesis if p-value is below 0.5%.\n",
+    "\n",
+    "Based on the result below, we can conclude (with 99% confidence) that we fail to reject the null hypothesis which means the average sales in terms of volume sold liters in January 2018 is more than equal to January 2022."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p-value 1.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "series_1_2018 = df6.loc[(df6['year'] == 2018) & (df6['month'] == 1),'volume_sold_liters']\n",
+    "series_1_2022 = df6.loc[(df6['year'] == 2022) & (df6['month'] == 1),'volume_sold_liters']\n",
+    "\n",
+    "t_stat, p_val = stats.ttest_ind(series_1_2018, series_1_2022, alternative=\"less\")\n",
+    "print(\"p-value {:.2f}\".format(p_val))"
    ]
   },
   {
